# learn-open-GL

./: .gitingore  README.md
chapter_2/: CMakeLists.txt
chapter_2/.cache/clangd/index/: program_2.2.cpp.522A06597587BD03.idx  program_2.5.cpp.F46B88E8C22CD268.idx  program_2.6.cpp.495B2C55DC257401.idx  utils.cpp.623362B64E389EB6.idx
chapter_2/include/: utils.cpp  utils.hpp
chapter_2/shaders/: vShader2.5.glsl
chapter_2/src/: program_2.1.cpp  program_2.2.cpp  program_2.4.cpp  program_2.5.cpp  program_2.6.cpp  question3.2.md
chapter_4/: CMakeLists.txt
chapter_4/include/: utils.cpp  utils.hpp
chapter_4/shaders/: commonRotation.glsl  fShader2.5.glsl  fShader4.1.glsl  vShader4.1.glsl  vShader4.2.glsl
chapter_4/src/: program_2.5re.cpp  program_4.1.cpp  program_4.1ani.cpp  program_4.2.cpp
